src/eccodes/eccodes.h


typedef struct grib_handle codes_handle;
typedef struct grib_multi_handle codes_multi_handle;
typedef struct grib_context codes_context;
typedef struct grib_iterator codes_iterator;
typedef struct grib_nearest codes_nearest;
typedef struct grib_keys_iterator codes_keys_iterator;
typedef struct grib_index codes_index;
codes_index* codes_index_new_from_file(codes_context* c, const char* filename, const char* keys, int* err);
codes_index* codes_index_new(codes_context* c, const char* keys, int* err);
int codes_index_add_file(codes_index* index, const char* filename);
int codes_index_write(codes_index* index, const char* filename);
codes_index* codes_index_read(codes_context* c, const char* filename, int* err);
int codes_index_get_size(const codes_index* index, const char* key, size_t* size);
int codes_index_get_long(const codes_index* index, const char* key, long* values, size_t* size);
int codes_index_get_double(const codes_index* index, const char* key, double* values, size_t* size);
int codes_index_get_string(const codes_index* index, const char* key, char** values, size_t* size);
int codes_index_select_long(codes_index* index, const char* key, long value);
int codes_index_select_double(codes_index* index, const char* key, double value);
int codes_index_select_string(codes_index* index, const char* key, const char* value);
codes_handle* codes_handle_new_from_index(codes_index* index, int* err);
void codes_index_delete(codes_index* index);
int codes_write_message(const codes_handle* h, const char* file, const char* mode);
codes_multi_handle* codes_grib_multi_handle_new(codes_context* c);
int codes_grib_multi_handle_append(codes_handle* h, int start_section, codes_multi_handle* mh);
int codes_grib_multi_handle_delete(codes_multi_handle* mh);
int codes_grib_multi_handle_write(codes_multi_handle* mh, FILE* f);
int codes_get_message(const codes_handle* h, const void** message, size_t* message_length);
int codes_get_message_copy(const codes_handle* h, void* message, size_t* message_length);
codes_iterator* codes_grib_iterator_new(const codes_handle* h, unsigned long flags, int* error);
int codes_grib_get_data(const codes_handle* h, double* lats, double* lons, double* values);
int codes_grib_iterator_next(codes_iterator* i, double* lat, double* lon, double* value);
int codes_grib_iterator_previous(codes_iterator* i, double* lat, double* lon, double* value);
int codes_grib_iterator_has_next(codes_iterator* i);
int codes_grib_iterator_reset(codes_iterator* i);
int codes_grib_iterator_delete(codes_iterator* i);
codes_nearest* codes_grib_nearest_new(const codes_handle* h, int* error);
int codes_grib_nearest_find(codes_nearest* nearest, const codes_handle* h, double inlat, double inlon,
                            unsigned long flags, double* outlats, double* outlons,
                            double* values, double* distances, int* indexes, size_t* len);
int codes_grib_nearest_delete(codes_nearest* nearest);
int codes_grib_nearest_find_multiple(const codes_handle* h, int is_lsm,
                                     const double* inlats, const double* inlons, long npoints,
                                     double* outlats, double* outlons,
                                     double* values, double* distances, int* indexes);
int codes_copy_namespace(codes_handle* dest, const char* name, codes_handle* src);
int codes_set_string(codes_handle* h, const char* key, const char* value, size_t* length);
int codes_set_bytes(codes_handle* h, const char* key, const unsigned char* bytes, size_t* length);
int codes_set_double_array(codes_handle* h, const char* key, const double* vals, size_t length);
int codes_set_float_array(codes_handle* h, const char* key, const float* vals, size_t length);
int codes_set_force_double_array(codes_handle* h, const char* key, const double* vals, size_t length);
int codes_set_force_float_array(codes_handle* h, const char* key, const float* vals, size_t length);
int codes_set_long_array(codes_handle* h, const char* key, const long* vals, size_t length);
int codes_set_string_array(codes_handle* h, const char* key, const char** vals, size_t length);
void codes_dump_content(const codes_handle* h, FILE* out, const char* mode, unsigned long option_flags, void* arg);
void codes_context_set_debug(codes_context* c, int mode);
void codes_grib_multi_support_on(codes_context* c);
void codes_grib_multi_support_off(codes_context* c);
char* codes_samples_path(const codes_context* c);
codes_keys_iterator* codes_keys_iterator_new(codes_handle* h, unsigned long filter_flags, const char* name_space);
int codes_bufr_copy_data(codes_handle* hin, codes_handle* hout);
int codes_keys_iterator_next(codes_keys_iterator* kiter);
const char* codes_keys_iterator_get_name(const codes_keys_iterator* kiter);
int codes_keys_iterator_delete(codes_keys_iterator* kiter);
int codes_keys_iterator_rewind(codes_keys_iterator* kiter);
int codes_key_is_computed(const grib_handle* h, const char* key, int* err);
int codes_set_missing(codes_handle* h, const char* key);
int codes_get_gaussian_latitudes(long truncation, double* latitudes);
int codes_julian_to_datetime(double jd, long* year, long* month, long* day, long* hour, long* minute, long* second);
int codes_datetime_to_julian(long year, long month, long day, long hour, long minute, long second, double* jd);
long codes_julian_to_date(long jdate);
long codes_date_to_julian(long ddate);
int codes_get_message_offset(const codes_handle* h, off_t* offset);
int codes_get_message_size(const codes_handle* h, size_t* size);
int codes_extract_offsets_malloc(codes_context* c, const char* filename, ProductKind product,
                                 off_t** offsets, int* num_messages, int strict_mode);