rust/eccodes-sys/src/lib.rs


    pub fn codes_set_string(
        h: *mut codes_handle,
        key: *const c_char,
        value: *const c_char,
        length: *mut usize,
    ) -> c_int;

    pub fn codes_set_bytes(
        h: *mut codes_handle,
        key: *const c_char,
        bytes: *const c_uchar,
        length: *mut usize,
    ) -> c_int;

    pub fn codes_set_missing(h: *mut codes_handle, key: *const c_char) -> c_int;

    // -- Set array --
    pub fn codes_set_long_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const c_long,
        length: usize,
    ) -> c_int;

    pub fn codes_set_double_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const c_double,
        length: usize,
    ) -> c_int;

    pub fn codes_set_float_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const c_float,
        length: usize,
    ) -> c_int;

    pub fn codes_set_string_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const *const c_char,
        length: usize,
    ) -> c_int;

    // -- Set force --
    pub fn codes_set_force_double_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const c_double,
        length: usize,
    ) -> c_int;

    pub fn codes_set_force_float_array(
        h: *mut codes_handle,
        key: *const c_char,
        vals: *const c_float,
        length: usize,
    ) -> c_int;

    // -- Write --
    pub fn codes_write_message(
        h: *const codes_handle,
        file: *const c_char,
        mode: *const c_char,
    ) -> c_int;

    pub fn codes_get_message(
        h: *const codes_handle,
        message: *mut *const c_void,
        message_length: *mut usize,
    ) -> c_int;

    pub fn codes_get_message_copy(
        h: *const codes_handle,
        message: *mut c_void,
        message_length: *mut usize,
    ) -> c_int;

    pub fn codes_get_message_offset(
        h: *const codes_handle,
        offset: *mut i64,
    ) -> c_int;

    pub fn codes_get_message_size(
        h: *const codes_handle,
        size: *mut usize,
    ) -> c_int;

    // -- Keys iterator --
    pub fn codes_keys_iterator_new(
        h: *mut codes_handle,
        filter_flags: c_ulong,
        name_space: *const c_char,
    ) -> *mut codes_keys_iterator;

    pub fn codes_keys_iterator_next(kiter: *mut codes_keys_iterator) -> c_int;

    pub fn codes_keys_iterator_get_name(
        kiter: *const codes_keys_iterator,
    ) -> *const c_char;

    pub fn codes_keys_iterator_delete(kiter: *mut codes_keys_iterator) -> c_int;

    pub fn codes_keys_iterator_rewind(kiter: *mut codes_keys_iterator) -> c_int;

    // -- Geo iterator --
    pub fn codes_grib_iterator_new(
        h: *const codes_handle,
        flags: c_ulong,
        error: *mut c_int,
    ) -> *mut codes_iterator;

    pub fn codes_grib_iterator_next(
        i: *mut codes_iterator,
        lat: *mut c_double,
        lon: *mut c_double,
        value: *mut c_double,
    ) -> c_int;

    pub fn codes_grib_iterator_previous(
        i: *mut codes_iterator,
        lat: *mut c_double,
        lon: *mut c_double,
        value: *mut c_double,
    ) -> c_int;

    pub fn codes_grib_iterator_has_next(i: *mut codes_iterator) -> c_int;
    pub fn codes_grib_iterator_reset(i: *mut codes_iterator) -> c_int;
    pub fn codes_grib_iterator_delete(i: *mut codes_iterator) -> c_int;

    pub fn codes_grib_get_data(
        h: *const codes_handle,
        lats: *mut c_double,
        lons: *mut c_double,
        values: *mut c_double,
    ) -> c_int;

    // -- Nearest --
    pub fn codes_grib_nearest_new(
        h: *const codes_handle,
        error: *mut c_int,
    ) -> *mut codes_nearest;

    pub fn codes_grib_nearest_find(
        nearest: *mut codes_nearest,
        h: *const codes_handle,
        inlat: c_double,
        inlon: c_double,
        flags: c_ulong,
        outlats: *mut c_double,
        outlons: *mut c_double,
        values: *mut c_double,
        distances: *mut c_double,
        indexes: *mut c_int,
        len: *mut usize,
    ) -> c_int;

    pub fn codes_grib_nearest_delete(nearest: *mut codes_nearest) -> c_int;

    pub fn codes_grib_nearest_find_multiple(
        h: *const codes_handle,
        is_lsm: c_int,
        inlats: *const c_double,
        inlons: *const c_double,
        npoints: c_long,
        outlats: *mut c_double,
        outlons: *mut c_double,
        values: *mut c_double,
        distances: *mut c_double,
        indexes: *mut c_int,
    ) -> c_int;

    // -- Index --
    pub fn codes_index_new(
        c: *mut codes_context,
        keys: *const c_char,
        err: *mut c_int,
    ) -> *mut codes_index;

    pub fn codes_index_new_from_file(
        c: *mut codes_context,
        filename: *const c_char,
        keys: *const c_char,
        err: *mut c_int,
    ) -> *mut codes_index;

    pub fn codes_index_add_file(
        index: *mut codes_index,
        filename: *const c_char,
    ) -> c_int;

    pub fn codes_index_read(
        c: *mut codes_context,
        filename: *const c_char,
        err: *mut c_int,
    ) -> *mut codes_index;

    pub fn codes_index_write(
        index: *mut codes_index,
        filename: *const c_char,
    ) -> c_int;

    pub fn codes_index_delete(index: *mut codes_index);

    pub fn codes_index_get_size(
        index: *const codes_index,
        key: *const c_char,
        size: *mut usize,
    ) -> c_int;

    pub fn codes_index_get_long(
        index: *const codes_index,
        key: *const c_char,
        values: *mut c_long,
        size: *mut usize,
    ) -> c_int;

    pub fn codes_index_get_double(
        index: *const codes_index,
        key: *const c_char,
        values: *mut c_double,
        size: *mut usize,
    ) -> c_int;

    pub fn codes_index_get_string(
        index: *const codes_index,
        key: *const c_char,
        values: *mut *mut c_char,
        size: *mut usize,
    ) -> c_int;

    pub fn codes_index_select_long(
        index: *mut codes_index,
        key: *const c_char,
        value: c_long,
    ) -> c_int;

    pub fn codes_index_select_double(
        index: *mut codes_index,
        key: *const c_char,
        value: c_double,
    ) -> c_int;

    pub fn codes_index_select_string(
        index: *mut codes_index,
        key: *const c_char,
        value: *const c_char,
    ) -> c_int;

    pub fn codes_handle_new_from_index(
        index: *mut codes_index,
        err: *mut c_int,
    ) -> *mut codes_handle;

    // -- Multi handle --
    pub fn codes_grib_multi_handle_new(
        c: *mut codes_context,
    ) -> *mut codes_multi_handle;

    pub fn codes_grib_multi_handle_append(
        h: *mut codes_handle,
        start_section: c_int,
        mh: *mut codes_multi_handle,
    ) -> c_int;

    pub fn codes_grib_multi_handle_delete(
        mh: *mut codes_multi_handle,
    ) -> c_int;

    pub fn codes_grib_multi_handle_write(
        mh: *mut codes_multi_handle,
        f: *mut FILE,
    ) -> c_int;

    // -- Copy / Namespace --
    pub fn codes_copy_namespace(
        dest: *mut codes_handle,
        name: *const c_char,
        src: *mut codes_handle,
    ) -> c_int;

    // -- BUFR --
    pub fn codes_bufr_copy_data(
        hin: *mut codes_handle,
        hout: *mut codes_handle,
    ) -> c_int;

    // -- Context config --
    pub fn codes_context_set_debug(c: *mut codes_context, mode: c_int);
    pub fn codes_grib_multi_support_on(c: *mut codes_context);
    pub fn codes_grib_multi_support_off(c: *mut codes_context);

    pub fn codes_samples_path(c: *const codes_context) -> *mut c_char;

    // -- Utilities --
    pub fn codes_get_gaussian_latitudes(
        truncation: c_long,
        latitudes: *mut c_double,
    ) -> c_int;

    pub fn codes_datetime_to_julian(
        year: c_long,
        month: c_long,
        day: c_long,
        hour: c_long,
        minute: c_long,
        second: c_long,
        jd: *mut c_double,
    ) -> c_int;

    pub fn codes_julian_to_datetime(
        jd: c_double,
        year: *mut c_long,
        month: *mut c_long,
        day: *mut c_long,
        hour: *mut c_long,
        minute: *mut c_long,
        second: *mut c_long,
    ) -> c_int;

    pub fn codes_julian_to_date(jdate: c_long) -> c_long;
    pub fn codes_date_to_julian(ddate: c_long) -> c_long;

    pub fn codes_dump_content(
        h: *const codes_handle,
        out: *mut FILE,
        mode: *const c_char,
        option_flags: c_ulong,
        arg: *mut c_void,
    );

    pub fn codes_key_is_computed(
        h: *const codes_handle,
        key: *const c_char,
        err: *mut c_int,
    ) -> c_int;

    pub fn codes_extract_offsets_malloc(
        c: *mut codes_context,
        filename: *const c_char,
        product: ProductKind,
        offsets: *mut *mut i64,
        num_messages: *mut c_int,
        strict_mode: c_int,
    ) -> c_int;
}
